--- a/.github/workflows/camera_capture_workflow.yml
+++ b/.github/workflows/camera_capture_workflow.yml
@@ -16,6 +16,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Use Node.js 20.x
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+
     - name: Set up timestamp and Download Image
       id: download
       run: |
