--- a/.github/workflows/camera_capture_workflow.yml
+++ b/.github/workflows/camera_capture_workflow.yml
@@ -1,8 +1,8 @@
 name: camera_capture_workflow
 
 on:
-#  schedule:
-#    - cron: '*/5 * * * *'  # Run every 5 minutes
+  schedule:
+    - cron: '*/5 * * * *'  # Run every 5 minutes
   workflow_dispatch:
 
 jobs:
